# hw_web_11_8

./: README.md  __init__.py  pyproject.toml
Mongo/: __init__.py  connect.py  main.py  models.py  seed.py
Mongo/storage/: quotes.json
Rabit/: config.ini  consumer.py  produser.py
